NetBSD Problem Report #53247

From www@NetBSD.org  Tue May  1 15:20:40 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A33BB7A110
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  1 May 2018 15:20:40 +0000 (UTC)
Message-Id: <20180501152039.8BFEF7A262@mollari.NetBSD.org>
Date: Tue,  1 May 2018 15:20:39 +0000 (UTC)
From: Roy Bixler <rcbixler@nyx.net>
Reply-To: Roy Bixler <rcbixler@nyx.net>
To: gnats-bugs@NetBSD.org
Subject: loss of IPv6 address with DHCP in netbsd-8
X-Send-Pr-Version: www-1.0

>Number:         53247
>Category:       bin
>Synopsis:       loss of IPv6 address with DHCP in netbsd-8
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue May 01 15:25:00 +0000 2018
>Closed-Date:    Sun Dec 15 02:34:44 +0000 2019
>Last-Modified:  Sun Dec 15 02:34:44 +0000 2019
>Originator:     rcbixler@nyx.net
>Release:        netbsd-8
>Organization:
>Environment:
NetBSD rbixler.britannica.net 8.0_RC1 NetBSD 8.0_RC1 (GENERIC) #6: Sun Apr 29 21:28:22 CDT 2018  rcb@rbixler.britannica.net:/usr/src/sys/arch/amd64/compile/obj/GENERIC amd64
>Description:
After booting up the system with dhcpcd to obtain both IPv4 and IPv6 addresses, I notice after a day or more that I lose the IPv6 address.  I noticed this problem for the first time after I updated to a regular netbsd-8 build from nyftp.netbsd.org from "NetBSD 8.0_BETA (GENERIC.201804122330Z)".  I installed it the next day, the 13th and it ran a few days without incident.  Then I saw the following message in /var/log/messages:

Apr 18 08:33:35 rbixler dhcpcd[284]: ipv6nd_handledata: No buffer space available

30 minutes later, all of my IPv6 routes expired:

Apr 18 09:03:35 rbixler dhcpcd[284]: re0: fe80::ec4:7aff:feda:2df3: router expired
Apr 18 09:03:35 rbixler dhcpcd[284]: re0: fe80::ec4:7aff:feda:2d5b: router expired
Apr 18 09:03:35 rbixler dhcpcd[284]: re0: fe80::ec4:7aff:feda:2e47: router expired

and I lost my IPv6 address:

Apr 18 09:03:35 rbixler dhcpcd[284]: re0: expired address 2620:105:c000:3:e8a3:dd9a:4e6b:10a2/64
Apr 18 09:03:35 rbixler dhcpcd[284]: re0: deleting route to 2620:105:c000:3::/64
Apr 18 09:03:35 rbixler dhcpcd[284]: re0: deleting default route via fe80::ec4:7aff:feda:2df3
Apr 18 09:03:35 rbixler dhcpcd[284]: re0: dropping DHCPv6 due to no valid routers

The problem is reproduceable.  I have also tried to use dhcpcd in IPv4-only mode and get my IPv6 address with plain autoconfiguration and, in that case, it is stable.  I hadn't seen this problem until after the update on the 13th.  I updated the system about a week earlier and didn't see the problem then.  I have updated to NetBSD-8_RC1 since the 13th and the problem persists.

>How-To-Repeat:
Boot the system using dhcpcd to obtain IPv6 address and, after a few days, I lose all IPv6 routes and the IPv6 address.

>Fix:
Downgrading to netbsd-8 as of April 6th or so would fix it.

IPv6 autoconfiguration or static configuration also work.

>Release-Note:

>Audit-Trail:
From: Roy Marples <roy@marples.name>
To: gnats-bugs@NetBSD.org, Roy@NetBSD.org, Bixler@NetBSD.org
Cc: 
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Tue, 1 May 2018 17:36:38 +0100

 This is a multi-part message in MIME format.
 --------------794B950F9EE4EF309A4B117E
 Content-Type: text/plain; charset=utf-8; format=flowed
 Content-Transfer-Encoding: 7bit

 Hi

 Does the attached patch to dhcpcd help?
 It will still report overflow, but the sockets will no longer be closed 
 and dhcpcd will continue as if before.

 Roy

 --------------794B950F9EE4EF309A4B117E
 Content-Type: text/plain; charset=UTF-8;
  name="dhcpcd-overflow.diff"
 Content-Transfer-Encoding: base64
 Content-Disposition: attachment;
  filename="dhcpcd-overflow.diff"

 ZGlmZiAtLWdpdCBhL3NyYy9kaGNwNi5jIGIvc3JjL2RoY3A2LmMKaW5kZXggNmU0NzBhOTgu
 LjM3YmUyMDc4IDEwMDY0NAotLS0gYS9zcmMvZGhjcDYuYworKysgYi9zcmMvZGhjcDYuYwpA
 QCAtMzQ1NiwxMyArMzQ1Niw2IEBAIGRoY3A2X3JlY3Yoc3RydWN0IGRoY3BjZF9jdHggKmN0
 eCwgc3RydWN0IGlwdjZfYWRkciAqaWEpCiAJYnl0ZXMgPSByZWN2bXNnX3JlYWxsb2Mocywg
 JmN0eC0+cmN2aGRyLCAwKTsKIAlpZiAoYnl0ZXMgPT0gLTEpIHsKIAkJbG9nZXJyKCIlczog
 cmVjdm1zZ19yZWFsbG9jIiwgX19mdW5jX18pOwotCQljbG9zZShzKTsKLQkJZWxvb3BfZXZl
 bnRfZGVsZXRlKGN0eC0+ZWxvb3AsIHMpOwotCQlpZiAoaWEgIT0gTlVMTCkKLQkJCWlhLT5k
 aGNwNl9mZCA9IC0xOwotCQllbHNlCi0JCQljdHgtPmRoY3A2X2ZkID0gLTE7Ci0JCWVsb29w
 X2V4aXQoY3R4LT5lbG9vcCwgMSk7CiAJCXJldHVybjsKIAl9CiAJbGVuID0gKHNpemVfdCli
 eXRlczsKZGlmZiAtLWdpdCBhL3NyYy9pcHY2bmQuYyBiL3NyYy9pcHY2bmQuYwppbmRleCBm
 MDU5ZmIwNy4uMzZhOTQ1ZDggMTAwNjQ0Ci0tLSBhL3NyYy9pcHY2bmQuYworKysgYi9zcmMv
 aXB2Nm5kLmMKQEAgLTE1MjksOSArMTUyOSw2IEBAIGlwdjZuZF9oYW5kbGVkYXRhKHZvaWQg
 KmFyZykKIAlsZW4gPSByZWN2bXNnX3JlYWxsb2MoY3R4LT5uZF9mZCwgJmN0eC0+cmN2aGRy
 LCAwKTsKIAlpZiAobGVuID09IC0xKSB7CiAJCWxvZ2VycihfX2Z1bmNfXyk7Ci0JCWVsb29w
 X2V2ZW50X2RlbGV0ZShjdHgtPmVsb29wLCBjdHgtPm5kX2ZkKTsKLQkJY2xvc2UoY3R4LT5u
 ZF9mZCk7Ci0JCWN0eC0+bmRfZmQgPSAtMTsKIAkJcmV0dXJuOwogCX0KIAljdHgtPnNmcm9t
 ID0gaW5ldF9udG9wKEFGX0lORVQ2LCAmY3R4LT5mcm9tLnNpbjZfYWRkciwK
 --------------794B950F9EE4EF309A4B117E--

From: Roy Bixler <rcbixler@nyx.net>
To: Roy Marples <roy@marples.name>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Tue, 1 May 2018 12:12:45 -0600

 I've just applied your patch and I suppose I'll know the results in a
 few days.

 Also, when I filed the bug, it looks like I messed up the e-mail
 address.  Could someone change it to "Roy Bixler <rcbixler@nyx.net>"?

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: Hisashi T Fujinaka <htodd@twofifty.com>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, Roy@NetBSD.org, 
    Bixler@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Tue, 1 May 2018 10:51:08 -0700 (PDT)

 Any chance you can post this not in mime format? I can't decode this
 mess.

 -- 
 Hisashi T Fujinaka - htodd@twofifty.com
 BSEE + BSChem + BAEnglish + MSCS + $2.50 = coffee

From: Roy Bixler <rcbixler@nyx.net>
To: Roy Marples <roy@marples.name>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Wed, 2 May 2018 12:25:57 -0600

 On Tue, May 01, 2018 at 12:12:45PM -0600, Roy Bixler wrote:
 > I've just applied your patch and I suppose I'll know the results in a
 > few days.

 The patch has the desired effect.  I see a couple of the
 "ipv6nd_handledata: No buffer space available" messages in the log
 from this morning, which at this point is about 5 hours ago.  Since
 then, I've also seen the usual dance where the default router expires
 and it settles on the right one again.  I still have an IPv6 address
 and my IPv6 connections are still good.

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: Roy Marples <roy@marples.name>
To: Roy Bixler <rcbixler@nyx.net>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Wed, 2 May 2018 19:40:33 +0100

 On 02/05/2018 19:25, Roy Bixler wrote:
 > On Tue, May 01, 2018 at 12:12:45PM -0600, Roy Bixler wrote:
 >> I've just applied your patch and I suppose I'll know the results in a
 >> few days.
 > 
 > The patch has the desired effect.  I see a couple of the
 > "ipv6nd_handledata: No buffer space available" messages in the log
 > from this morning, which at this point is about 5 hours ago.  Since
 > then, I've also seen the usual dance where the default router expires
 > and it settles on the right one again.  I still have an IPv6 address
 > and my IPv6 connections are still good.

 Nice.

 Can you also test the kernel patch I posted here please:
 https://mail-index.netbsd.org/current-users/2018/05/01/msg033606.html

 Hopefully the message will then be completely eliminated.

 Roy

From: Roy Bixler <rcbixler@nyx.net>
To: Roy Marples <roy@marples.name>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Wed, 2 May 2018 13:56:34 -0600

 On Wed, May 02, 2018 at 07:40:33PM +0100, Roy Marples wrote:
 > On 02/05/2018 19:25, Roy Bixler wrote:
 > >On Tue, May 01, 2018 at 12:12:45PM -0600, Roy Bixler wrote:
 > >>I've just applied your patch and I suppose I'll know the results in a
 > >>few days.
 > >
 > >The patch has the desired effect.  I see a couple of the
 > >"ipv6nd_handledata: No buffer space available" messages in the log
 > >from this morning, which at this point is about 5 hours ago.  Since
 > >then, I've also seen the usual dance where the default router expires
 > >and it settles on the right one again.  I still have an IPv6 address
 > >and my IPv6 connections are still good.
 > 
 > Nice.
 > 
 > Can you also test the kernel patch I posted here please:
 > https://mail-index.netbsd.org/current-users/2018/05/01/msg033606.html
 > 
 > Hopefully the message will then be completely eliminated.

 I am now running the patched NetBSD 8_RC1 kernel.  I'll report back if
 I see the "No buffer space" message.  If I don't see it, I'd give it a
 week or so before declaring success.

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: Roy Marples <roy@marples.name>
To: Roy Bixler <rcbixler@nyx.net>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Thu, 3 May 2018 04:52:08 +0100

 On 02/05/2018 19:25, Roy Bixler wrote:
 > On Tue, May 01, 2018 at 12:12:45PM -0600, Roy Bixler wrote:
 >> I've just applied your patch and I suppose I'll know the results in a
 >> few days.
 > 
 > The patch has the desired effect.  I see a couple of the
 > "ipv6nd_handledata: No buffer space available" messages in the log
 > from this morning, which at this point is about 5 hours ago.  Since
 > then, I've also seen the usual dance where the default router expires
 > and it settles on the right one again.  I still have an IPv6 address
 > and my IPv6 connections are still good.
 > 

 dhcpcd was fixed here:
 https://mail-index.netbsd.org/source-changes/2018/05/02/msg094808.html

From: Hisashi T Fujinaka <htodd@twofifty.com>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, 
    Roy Bixler <rcbixler@nyx.net>
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Wed, 2 May 2018 22:01:49 -0700 (PDT)

 On Thu, 3 May 2018, Roy Marples wrote:

 > dhcpcd was fixed here:
 > https://mail-index.netbsd.org/source-changes/2018/05/02/msg094808.html

 Was a pullup requested for netbsd-8 or should I just install it from the
 tarball?

 -- 
 Hisashi T Fujinaka - htodd@twofifty.com
 BSEE + BSChem + BAEnglish + MSCS + $2.50 = coffee

From: Roy Bixler <rcbixler@nyx.net>
To: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: bin/53247: loss of IPv6 address with DHCP in netbsd-8
Date: Wed, 9 May 2018 14:43:09 -0600

 On Wed, May 02, 2018 at 08:05:00PM +0000, Roy Bixler wrote:
 >  I am now running the patched NetBSD 8_RC1 kernel.  I'll report back if
 >  I see the "No buffer space" message.  If I don't see it, I'd give it a
 >  week or so before declaring success.

 I've run the patched kernel for a week now and I have not seen the "No
 buffer space" message.  Outside of a local network outage, I also have
 not lost my IPv6 address.  The IPv6 routers went down and I lost my
 IPv6 address then.  When the routers came back up, I regained it.

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53247 CVS commit: src/sys
Date: Fri, 11 May 2018 09:43:59 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Fri May 11 09:43:59 UTC 2018

 Modified Files:
 	src/sys/kern: uipc_usrreq.c
 	src/sys/net: raw_cb.h
 	src/sys/netinet6: in6_proto.c

 Log Message:
 Increase the default size of some receive buffers from 8k to 16k.
 This mitigates recent reports of socket overflow errors
 and fixes PR bin/53247.


 To generate a diff of this commit:
 cvs rdiff -u -r1.185 -r1.186 src/sys/kern/uipc_usrreq.c
 cvs rdiff -u -r1.28 -r1.29 src/sys/net/raw_cb.h
 cvs rdiff -u -r1.124 -r1.125 src/sys/netinet6/in6_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53247 CVS commit: [netbsd-8] src/sys
Date: Sat, 12 May 2018 10:42:23 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat May 12 10:42:22 UTC 2018

 Modified Files:
 	src/sys/kern [netbsd-8]: uipc_usrreq.c
 	src/sys/net [netbsd-8]: raw_cb.h
 	src/sys/netinet6 [netbsd-8]: in6_proto.c

 Log Message:
 Pull up following revision(s) (requested by roy in ticket #821):

 	sys/netinet6/in6_proto.c: revision 1.125
 	sys/net/raw_cb.h: revision 1.29
 	sys/kern/uipc_usrreq.c: revision 1.186

 Increase the default size of some receive buffers from 8k to 16k.

 This mitigates recent reports of socket overflow errors
 and fixes PR bin/53247.


 To generate a diff of this commit:
 cvs rdiff -u -r1.181.8.1 -r1.181.8.2 src/sys/kern/uipc_usrreq.c
 cvs rdiff -u -r1.27.4.1 -r1.27.4.2 src/sys/net/raw_cb.h
 cvs rdiff -u -r1.117.4.4 -r1.117.4.5 src/sys/netinet6/in6_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Roy Bixler <rcbixler@nyx.net>
To: gnats-bugs@NetBSD.org
Cc: netbsd-bugs@netbsd.org
Subject: Re: PR/53247 CVS commit: src/sys
Date: Sat, 12 May 2018 06:05:41 -0600

 On Fri, May 11, 2018 at 09:45:01AM +0000, Roy Marples wrote:
 > The following reply was made to PR bin/53247; it has been noted by GNATS.
 > 
 > From: "Roy Marples" <roy@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc: 
 > Subject: PR/53247 CVS commit: src/sys
 > Date: Fri, 11 May 2018 09:43:59 +0000
 > 
 >  Module Name:	src
 >  Committed By:	roy
 >  Date:		Fri May 11 09:43:59 UTC 2018
 >  
 >  Modified Files:
 >  	src/sys/kern: uipc_usrreq.c
 >  	src/sys/net: raw_cb.h
 >  	src/sys/netinet6: in6_proto.c
 >  
 >  Log Message:
 >  Increase the default size of some receive buffers from 8k to 16k.
 >  This mitigates recent reports of socket overflow errors
 >  and fixes PR bin/53247.
 >  
 >  
 >  To generate a diff of this commit:
 >  cvs rdiff -u -r1.185 -r1.186 src/sys/kern/uipc_usrreq.c
 >  cvs rdiff -u -r1.28 -r1.29 src/sys/net/raw_cb.h
 >  cvs rdiff -u -r1.124 -r1.125 src/sys/netinet6/in6_proto.c
 >  
 >  Please note that diffs are not public domain; they are subject to the
 >  copyright notices on the relevant files.

 I've tested the dhcpcd patch alone and the dhcpcd patch plus the
 kernel buffer size patch, but I have not tested the kernel buffer size
 patch alone.  I've reverted the change to my local version of dhcpcd
 and will now test to see that the buffer size increase alone is
 sufficient.


 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: Robert Elz <kre@munnari.OZ.AU>
To: Roy Bixler <rcbixler@nyx.net>
Cc: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org
Subject: Re: PR/53247 CVS commit: src/sys
Date: Sat, 12 May 2018 19:35:32 +0700

     Date:        Sat, 12 May 2018 06:05:41 -0600
     From:        Roy Bixler <rcbixler@nyx.net>
     Message-ID:  <20180512120541.GA1371@nyx.net>

   | I've tested the dhcpcd patch alone and the dhcpcd patch plus the
   | kernel buffer size patch, but I have not tested the kernel buffer size
   | patch alone.  I've reverted the change to my local version of dhcpcd
   | and will now test to see that the buffer size increase alone is
   | sufficient.

 I doubt that is necessary, or even useful.   It is certainly possible that in
 your environment you won't lose any routing messages with the bigger
 buffer, and in that case, the dhcpcd issue won't bother you - but it would
 still be there, until one day, something unusual happens, you get more
 routing socket messages than usual, and one is lost.   The real problem
 is fixed, an occasional message from dhcpcd saying it lost a message
 will harm nothing (since it now recovers properly).

 Whatever your results are from that test won't provide any useful info,
 so I just wouldn't waste the time and effort.

 kre

From: Roy Bixler <rcbixler@nyx.net>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/53247 CVS commit: src/sys
Date: Sat, 12 May 2018 08:34:16 -0600

 On Sat, May 12, 2018 at 12:40:01PM +0000, Robert Elz wrote:
 > The following reply was made to PR bin/53247; it has been noted by GNATS.
 > 
 > From: Robert Elz <kre@munnari.OZ.AU>
 > To: Roy Bixler <rcbixler@nyx.net>
 > Cc: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org
 > Subject: Re: PR/53247 CVS commit: src/sys
 > Date: Sat, 12 May 2018 19:35:32 +0700
 > 
 >      Date:        Sat, 12 May 2018 06:05:41 -0600
 >      From:        Roy Bixler <rcbixler@nyx.net>
 >      Message-ID:  <20180512120541.GA1371@nyx.net>
 >  
 >    | I've tested the dhcpcd patch alone and the dhcpcd patch plus the
 >    | kernel buffer size patch, but I have not tested the kernel buffer size
 >    | patch alone.  I've reverted the change to my local version of dhcpcd
 >    | and will now test to see that the buffer size increase alone is
 >    | sufficient.
 >  
 >  I doubt that is necessary, or even useful.   It is certainly possible that in
 >  your environment you won't lose any routing messages with the bigger
 >  buffer, and in that case, the dhcpcd issue won't bother you - but it would
 >  still be there, until one day, something unusual happens, you get more
 >  routing socket messages than usual, and one is lost.   The real problem
 >  is fixed, an occasional message from dhcpcd saying it lost a message
 >  will harm nothing (since it now recovers properly).

 I was under the impression that that dhcpcd patch I originally tried
 is why dhcpcd recovers properly from the error, but that it was not
 going to be pulled into netbsd-8.  Have I missed something?

 >  Whatever your results are from that test won't provide any useful info,
 >  so I just wouldn't waste the time and effort.

 I want to test netbsd-8 as it will be.  To check, I did a "cvs up" on
 the netbsd-8 tree where I reverted the dhcpcd patch.  Nothing got
 updated in the dhcpcd source tree, so I believe that I am testing
 netbsd-8 as it is.

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

From: Robert Elz <kre@munnari.OZ.AU>
To: Roy Bixler <rcbixler@nyx.net>
Cc: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org
Subject: Re: PR/53247 CVS commit: src/sys
Date: Sat, 12 May 2018 22:55:17 +0700

     Date:        Sat, 12 May 2018 08:34:16 -0600
     From:        Roy Bixler <rcbixler@nyx.net>
     Message-ID:  <20180512143416.GA22962@nyx.net>

   | I was under the impression that that dhcpcd patch I originally tried
   | is why dhcpcd recovers properly from the error, but that it was not
   | going to be pulled into netbsd-8.  Have I missed something?

 That one I cannot answer - I can't think of any reason it could not be
 included, it is a bug fix, and certainly could be pulled up.

 But someone has to request it, and then releng need to do it.

 That is, if the patch has even been applied to NetBSD-current - I'm not
 sure of that either, but if it hasn't, it should be.

 dhcpcd has tended to be upgraded to a whole new version when there are
 fixes (which can also introduce other changes, which might not be
 appropriate to be pulled up) but there is no reason an isolated fix cannot
 be incorporated, and then pulled up, in the interim.

 The dhcpcd change was the bug fix here, the other changes simply make
 the bug occur less often.

 kre

From: Roy Bixler <rcbixler@nyx.net>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/53247 CVS commit: src/sys
Date: Sat, 12 May 2018 11:10:43 -0600

 On Sat, May 12, 2018 at 04:00:01PM +0000, Robert Elz wrote:
 > The following reply was made to PR bin/53247; it has been noted by GNATS.
 > 
 > From: Robert Elz <kre@munnari.OZ.AU>
 > To: Roy Bixler <rcbixler@nyx.net>
 > Cc: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org
 > Subject: Re: PR/53247 CVS commit: src/sys
 > Date: Sat, 12 May 2018 22:55:17 +0700
 > 
 >      Date:        Sat, 12 May 2018 08:34:16 -0600
 >      From:        Roy Bixler <rcbixler@nyx.net>
 >      Message-ID:  <20180512143416.GA22962@nyx.net>
 >  
 >    | I was under the impression that that dhcpcd patch I originally tried
 >    | is why dhcpcd recovers properly from the error, but that it was not
 >    | going to be pulled into netbsd-8.  Have I missed something?
 >  
 >  That one I cannot answer - I can't think of any reason it could not be
 >  included, it is a bug fix, and certainly could be pulled up.
 >  
 >  But someone has to request it, and then releng need to do it.
 >  
 >  That is, if the patch has even been applied to NetBSD-current - I'm not
 >  sure of that either, but if it hasn't, it should be.
 >  
 >  dhcpcd has tended to be upgraded to a whole new version when there are
 >  fixes (which can also introduce other changes, which might not be
 >  appropriate to be pulled up) but there is no reason an isolated fix cannot
 >  be incorporated, and then pulled up, in the interim.
 >  
 >  The dhcpcd change was the bug fix here, the other changes simply make
 >  the bug occur less often.

 Yes, I agree.  It would be better if we also had the dhcpcd fix in
 netbsd-8.

 -- 
 Roy Bixler <rcbixler@nyx.net>
 "The fundamental principle of science, the definition almost, is this: the
 sole test of the validity of any idea is experiment."
 -- Richard P. Feynman

State-Changed-From-To: open->closed
State-Changed-By: roy@NetBSD.org
State-Changed-When: Sun, 15 Dec 2019 02:34:44 +0000
State-Changed-Why:
dhcpcd-7.2.2 has long been imported into netbsd-8.
Sorry this slipped off my radar!
It should be in NetBSD-8.1 release.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.45 2018/12/21 14:23:33 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.